--- a/report/egbib.bib
+++ b/report/egbib.bib
@@ -1,3 +1,10 @@
+@article{kingma2014adam,
+	title={Adam: A method for stochastic optimization},
+	author={Kingma, Diederik P and Ba, Jimmy},
+	journal={arXiv preprint arXiv:1412.6980},
+	year={2014}
+}
+
 @inproceedings{shi2016real,
    author = {Shi, Wenzhe and Caballero, Jose and Huszár, Ferenc and Totz, Johannes and Aitken, Andrew P and Bishop, Rob and Rueckert, Daniel and Wang, Zehan},
    title = {Real-time single image and video super-resolution using an efficient sub-pixel convolutional neural network},
