--- a/report/egpaper_final.tex
+++ b/report/egpaper_final.tex
@@ -32,7 +32,7 @@
 \author{Chao Xu\\
 The Chinese University of Hong Kong\\
 Shatin, New Territories, Hong Kong SAR\\
-{\tt\small 1155160618@lin.cuhk.edu.hk}
+{\tt\small 1155160618@link.cuhk.edu.hk}
 % For a paper whose authors are all at the same institution,
 % omit the following lines up until the closing ``}''.
 % Additional authors and addresses can be added with ``\and'',
